--- a/laptop.html
+++ b/laptop.html
@@ -74,7 +74,7 @@
                         <h1>The Laptop</h1>
                         <p></p>
                         <span><button onclick="test()" class="btn btn-lg btn-primary" id="submitbutton" style="margin-bottom:5px;">Who Will Win the Laptop?</button>
-                            <img src="" id="chrispic"/>
+                            <img src="" id="chrispic" width="100%"/>
                         <a href="#menu-toggle" class="btn btn-default" id="menu-toggle" style="position:fixed; bottom:20px; right:20px;">Toggle Menu</a>
                         <script>
                             function test()
