--- a/struct.html
+++ b/struct.html
@@ -12,10 +12,10 @@
     <title>Java QuickReference</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="../css/simple-sidebar.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -88,7 +88,7 @@
                         <p>Java is a <strong>Strict Type</strong> Language. This means every variable, method and class has to be explicitly defined a certain <strong>type.</strong></p>
                         <p>There are some different <strong>Primitve Types</strong> within Java. A <strong>primitive type</strong> is a type of <a href="variables.html"><strong>variable</strong></a> that does not conform to any <code>interface</code> or <code>class</code> and therefore cannot make use of any <strong>methods.</strong></p>
                         <h2>Structure of a Java Program</h2>
-                        <h3><a href="classes.html">Classes</a></h3>
+                        <h3><a href="objects.html">Classes</a></h3>
                         <p><strong>Classes</strong>, otherwise known as <strong>objects</strong>, are containers for <a href="methods.html">methods</a> and <a href="variables.html">variables</a> that have a close relationship to one another in a way that makes sense to the program and other programmers. <br><strong>Every method and variable in Java must be encapsuled by a <a href="objects.html">class</a> or <a href="objects.html#interfaces">interface</a></strong>.</p>
                         <h3><a href="methods.html">Methods</a></h3>
                         <p><strong>Methods</strong> allow a programmer to embed repeated or lengthy amounts of code inside a function that exectues when it is <a href="methods.html#calls">called</a>. Methods can do everything from a simple math calculation to large algorithms to displaying colors on a computer screen. The only limit to a method's actions is the programmer's imagination.</p>
@@ -200,10 +200,10 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="../js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
 
     <!-- Menu Toggle Script -->
     <script>
